<resources>
    <string name="app_name">Dat Music Player</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add">Add Song</string>
    <string name="title_activity_remove_view">Remove</string>
    <string name="title_activity_search_results">Results</string>
    <string name="title_activity_song_view">Song</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="validate">Validate</string>
    <string name="imageUploadButton">Change Cover</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="path">Path</string>
    <string name="changeSong">Change Song</string>
    <string name="noResults">No Results</string>
    <string name="registeredSongs">RegisteredSongs</string>
    <string name="by">by</string>
    <string name="removeSuccess">was successfully removed</string>
    <string name="results">Results</string>
    <string name="serverHostname">Server Hostname</string>
    <string name="serverPort">Server Port</string>
    <string name="ping">Ping</string>
    <string name="statusOK">Status : OK</string>
    <string name="statusOFF">Status : OFF</string>
    <string name="cancel">Cancel</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="remove">Remove</string>
    <string name="addSong">Add Song</string>
    <string name="listSongs">List all songs</string>
    <string name="artistSearch">Search by artist</string>
    <string name="titleSearch">Search by title</string>
    <string name="recordOn">Recording</string>
    <string name="recordOff">Record</string>
    <string name="noSong">Please select a Song</string>
    <string name="noTitle">Please choose a title</string>
    <string name="noArtist">Please choose an artist</string>
    <string name="addSuccess">was successfully added</string>
    <string name="confirmRemoveTitle">Confirmation</string>
    <string name="confirmRemoveText">Are you sure you want to remove</string>
    <string name="serverListEmpty">No servers</string>
    <string name="serverManagementTitle">Manage Server</string>
    <string name="removeServer">Remove From Servers</string>
    <string name="close">Close</string>
    <string name="speechRecognizer">Speech Recognition</string>
    <string name="addServerButton">Add Server</string>
    <string name="statusNeutral">Waiting</string>
    <string name="serverAddTitle">Add New Server</string>
    <string name="noServerAdded">No Servers Were Added</string>
    <string name="serverAdded">A new Server was added</string>
    <string name="mustPing">You must ping the Server before adding it</string>
    <string name="serversInList">servers registered</string>
    <string name="noMP3">The song must mp3 format</string>
    <string name="cover">Cover</string>
</resources>
