<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:baselineAligned="false">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:maxHeight="14.5sp"
            android:maxWidth="14.5sp"
            android:contentDescription="@string/cover"
            android:id="@+id/imgView2" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/nameLabelSong" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/artistLabelSong" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:id="@+id/playButton"
            android:onClick="onPlay" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            android:id="@+id/pauseButton"
            android:onClick="onPause" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:id="@+id/stopButton"
            android:onClick="onStopButton" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            android:onClick="onRemove"
            android:id="@+id/removeButton" />

    </LinearLayout>
</ScrollView>

